--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">Hello World</string>
+    <string name="app_name">Hello Toast</string>
     <string name="Toast_text">Toast</string>
     <string name="count_text">Count</string>
     <string name="zero">0</string>
-    <string name="toast_message">Hello Toast</string>
+    <string name="toast_message">Hello ACCS3353</string>
 
 </resources>
