--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="Toast_text">Toast</string>
     <string name="count_text">Count</string>
     <string name="zero">0</string>
-    <string name="toast_message">Hello ACCS3353</string>
+    <string name="toast_message">Chua Guangwen 1900877</string>
 
 </resources>
