Commit by Chua Guangwen

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="count_text">Count</string>
     <string name="zero">0</string>
     <string name="toast_message">Chua Guangwen 1900877</string>
+    <string name="Zero">Zero</string>
 
 </resources>
